force-app/main/default/objects/Skill_Data__c/Skill_Data__c.object-meta.xml
<CustomObject>
    <description>This Object get data from salesforce</description>
    <label>Skill Data</label>
    <nameField>
        <label>Skill Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>