force-app/main/default/objects/Skill_Data__c/fields/Are_you_a_Doctor_or_Practice__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_Doctor_or_Practice__c</fullName>
    <description>Are you a Doctor or Practice?*</description>
    <label>Are you a Doctor or Practice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>