force-app/main/default/objects/Skill_Data__c/fields/Are_you_eligible_for_Specialist_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Are_you_eligible_for_Specialist_Pathway__c</fullName>
    <label>Are you eligible for Specialist Pathway?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>