force-app/main/default/objects/Skill_Data__c/fields/Are_you_registered_in_Australia__c.field-meta.xml
<CustomField>
    <fullName>Are_you_registered_in_Australia__c</fullName>
    <description>Are you registered in Australia?</description>
    <label>Are you registered in Australia?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>