force-app/main/default/objects/Skill_Data__c/fields/Did_you_complete_your_degree_in_Australi__c.field-meta.xml
<CustomField>
    <fullName>Did_you_complete_your_degree_in_Australi__c</fullName>
    <description>Did you complete your degree in Australia or New Zealand?</description>
    <label>Did you complete your degree in Australi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>