force-app/main/default/objects/Skill_Data__c/fields/Does_your_practice_have_2_VR_Doctors_who__c.field-meta.xml
<CustomField>
    <fullName>Does_your_practice_have_2_VR_Doctors_who__c</fullName>
    <description>Does your practice have 2 VR Doctors who work a minimum of 3 days in practice who are willing to supervise at Level 1?</description>
    <label>Does your practice have 2 VR Doctors who</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>