force-app/main/default/objects/Skill_Data__c/fields/Does_your_Practice_offer_sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Does_your_Practice_offer_sponsorship__c</fullName>
    <label>Does your Practice offer sponsorship?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>