force-app/main/default/objects/Skill_Data__c/fields/DPA_or_Non_DPA__c.field-meta.xml
<CustomField>
    <fullName>DPA_or_Non_DPA__c</fullName>
    <label>DPA or Non-DPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DPA</fullName>
            </value>
            <value>
                <fullName>Non-DPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>