force-app/main/default/objects/Skill_Data__c/fields/Have_you_completed_Fellowship__c.field-meta.xml
<CustomField>
    <fullName>Have_you_completed_Fellowship__c</fullName>
    <description>Have you completed Fellowship?</description>
    <inlineHelpText>Have you completed Fellowship?</inlineHelpText>
    <label>Have you completed Fellowship?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>