force-app/main/default/objects/Skill_Data__c/fields/Have_you_worked_in_a_competent_author__c.field-meta.xml
<CustomField>
    <fullName>Have_you_worked_in_a_competent_author__c</fullName>
    <description>Have you worked in a competent authority country?</description>
    <inlineHelpText>Have you worked in a competent authority country?</inlineHelpText>
    <label>Have you worked in a competent authori</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>