force-app/main/default/objects/Skill_Data__c/fields/Name_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Practice__c</fullName>
    <complianceGroup>PII;HIPAA;GDPR;PCI;COPPA;CCPA</complianceGroup>
    <description>Name of Practice</description>
    <externalId>true</externalId>
    <label>Name of Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>