force-app/main/default/objects/Skill_Data__c/fields/Practice_Address__c.field-meta.xml
<CustomField>
    <fullName>Practice_Address__c</fullName>
    <description>Practice Address</description>
    <label>Practice Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>