force-app/main/default/objects/Skill_Data__c/fields/Practice_Phone__c.field-meta.xml
<CustomField>
    <fullName>Practice_Phone__c</fullName>
    <description>Practice  Phone</description>
    <label>Practice  Phone</label>
    <type>Phone</type>
</CustomField>