force-app/main/default/objects/Skill_Data__c/fields/Were_you_a_PR_or_a_citizen_at_commenceme__c.field-meta.xml
<CustomField>
    <fullName>Were_you_a_PR_or_a_citizen_at_commenceme__c</fullName>
    <description>Were you a PR or a citizen at commencement of the degree?</description>
    <inlineHelpText>Were you a PR or a citizen at commencement of the degree?  Yes No</inlineHelpText>
    <label>Were you a PR or a citizen at commenceme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>