force-app/main/default/objects/Skill_Data__c/fields/Were_you_Grandfathered__c.field-meta.xml
<CustomField>
    <fullName>Were_you_Grandfathered__c</fullName>
    <description>Were you Grandfathered?</description>
    <inlineHelpText>Were you Grandfathered?</inlineHelpText>
    <label>Were you Grandfathered?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>