force-app/main/default/objects/Skill_Data__c/fields/What_is_your_MMM_Status__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_MMM_Status__c</fullName>
    <label>What is your MMM Status?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metro (MMM 1)</fullName>
            </value>
            <value>
                <fullName>Rural (MMM 2-7)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>